fix an error about font vertical-align, set parent div height to 100%, so align-item will take effect

--- a/src/styles/components/button/button.scss
+++ b/src/styles/components/button/button.scss
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
   }
 
   &-icon {
